[gd_scene load_steps=2 format=3 uid="uid://b5pr88kby4yxd"]

[ext_resource type="Script" path="res://options.gd" id="1_f5w0i"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5w0i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -33.0
offset_right = 33.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Video" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Video"

[node name="Audio" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Audio"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = 350.0
offset_right = 107.5
offset_bottom = 482.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Back" to="." method="_on_back_pressed"]
